--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <!-- Iteration 2: Provide an appropriate meta element & specify
                     your document's character encoding as utf-8 (It's a universal character set) -->
   <meta charset="utf-8">
-  <!-- Iteration 3: Give an appropriate tag to markup "Serenity" as a title-->
   <title>Serenity</title>
   <link rel="icon" sizes="32x32" href="assets/favicon-32x32.png">
   <link rel="stylesheet" href="index.css">
@@ -24,7 +23,7 @@
     Understanding peace as absence of violence is a limited vision.
     Peace encompasses happiness and harmony among living beings.
     In a wider understanding, peace is the nature and goal of every sentient being.
-    <!-- Iteration 6: Give an appropriate Emphasis element individually to "money", "you", "make" to show them as a inline element -->
+    <!-- Iteration 6: wrap "money", "you", "make" individually with <em> tag to make them as a inline element -->
     No matter how much <em>money</em><em>you</em><em>make</em>, a bigger house, a nicer car,
     or more expensive clothing won't give you peace of mind.
     Expecting material possessions to satisfy your needs will leave you
@@ -34,7 +33,7 @@
     <!-- Iteration 5.1: Put an appropriate closing tag for closing the block element -->
   </p>
   <hr>
-  <!-- Iteration 7.1: Provide a class attribute to h2 tag and give it the value as "edit" and see the changes -->
+  <!-- Iteration 7.1: Provide a attribute of class to h2 tag and give it the value as "edit" and see the changes -->
   <h2 class="edit">Short-term politics</h2>
   <p>
     "Many of today's world leaders have great courage: the courage to do harm.
@@ -64,7 +63,7 @@
   <h2 class="edit">Our happiness comes from others</h2>
   <p>"In this world, all qualities spring from preferring the wellbeing of others to our own,
     whereas frustrations, confusion, and pain result from selfish attitudes.
-    <!-- Iteration 10: Provide an appropriate quotes for the attribute values to avoid Omitting quotes error  -->
+    <!-- Iteration 10: Provide an appropriate quotes for the attribute values to make this hyperlink work  -->
     By adopting an <a href="https://en.wikipedia.org/wiki/Altruism" title="The wikipedia Homepage">altruistic</a> outlook and by treating others in the way they deserve,
     our own happiness is assured as a byproduct. We should realize that self-centeredness
     <!-- Iteration 11: Provide an appropriate Character reference equivalent to markup special character (") at the end of the line  -->
@@ -78,7 +77,7 @@
   </center>
   <center>
     <h1>Thank You</h1>
-    <!-- Iteration 13: Provide an appropriate nesting element tags to markup "Dalai Lama" as an important word  -->
+    <!-- Iteration 13: Nest strong tag to make "Dalai Lama" bold -->
     <footer>The Serenity in the Little Book of Inner Peace by <strong>Dalai Lama</strong></footer>
   </center>
 </body>
